# hebbo-rs

./: .gitignore  Cargo.toml  diesel.toml  hebbo.toml  items.sql  log.txt  new.sql  start.sh
src/: config.rs  database.rs  lib.rs  main.rs  schema.rs  schema_ext.rs  server.rs
src/codec/: frame.rs  mod.rs  net.rs  rc4.rs
src/encoding/: base64.rs  mod.rs  wire.rs
src/game/: mod.rs  session.rs  session_manager.rs  session_state.rs  user.rs
src/game/achievement/: base.rs
src/game/handlers/: mod.rs
src/game/handlers/handshake/: init_crypto.rs  mod.rs  user_sso_login.rs
src/game/handlers/messenger/: initialise_messenger.rs  mod.rs
src/game/handlers/misc/: get_message_of_the_day.rs  get_sound_settings.rs  mod.rs  not_implemented.rs  perform_latency_test.rs
src/game/handlers/navigator/: get_navigator_categories.rs  get_navigator_official_rooms.rs  mod.rs
src/game/handlers/room/: get_room_furni_campaigns.rs  get_room_group_badges.rs  get_room_heightmap.rs  get_room_objects.rs  get_room_public_data.rs  make_room_floor_items.rs  make_room_heightmap.rs  make_room_join_error.rs  make_room_model_info.rs  make_room_model_static_items.rs  make_room_relative_heightmap.rs  make_room_url.rs  mod.rs  open_room_public.rs
src/game/handlers/user/: get_achievement_score.rs  get_user_balance.rs  get_user_ignores.rs  get_user_info.rs  get_user_subscriptions.rs  (+2 more)
src/game/item/: model.rs
src/game/navigator/: category.rs  mod.rs  official.rs
src/game/room/: base.rs  item.rs  mod.rs  model.rs  model_static_item.rs
src/message/: handler.rs  incoming.rs  mod.rs  outgoing.rs
