[package]
edition = "2018"
name = "hebbo"
version = "0.1.0"
default-run = "hebbo"

[dependencies]
base64 = "^0.13.0"
bytes = "^1"
cached = { version = "^0.24.0", features = ["proc_macro", "async"] }
chrono = "^0.4.19"
dashmap = "^4.0.2"
env_logger = "^0.9.0"
futures = "^0.3.16"
log = "^0.4.14"
rc4 = "^0.0.0"
rustls = "^0.19.1"
rsa = "^0.4.0"
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.66"
diesel = { version = "^1.4.7", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
tokio = { version = "^1.8.1", features = ["full"] }
tokio-diesel = {git = "https://github.com/mehcode/tokio-diesel" }
tokio-util = { version = "^0.6.7", features = ["full"] }
toml = "^0.5.8"
uuid = { version = "*", features = ["v4"] }
x25519-dalek = "^1.1.1"
